--- a/style.css
+++ b/style.css
@@ -1078,7 +1078,7 @@ footer {
   padding: 3%;
   display: flex;
   justify-content: space-evenly;
-  font-family: "Nunito", sans-serif;
+  font-family:"Nunito", sans-serif;
   font-weight: 500;
   width: 100vw;
   margin: 0 auto;
@@ -1090,7 +1090,7 @@ ul {
 
 ul a {
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin-top: 10px;
   color: #dddddd;
   justify-content: center;
@@ -1103,7 +1103,7 @@ ul a:hover {
 }
 
 ul p {
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 500;
 }
 
@@ -1151,8 +1151,8 @@ ul p:hover {
 }
 
 .flex-column-form h3 {
-  font-size: 2rem;
-  letter-spacing: 2px;
+  font-size: 1.6rem;
+  letter-spacing: normal;
   font-family: "Nunito", sans-serif;
 }
 
