--- a/style.css
+++ b/style.css
@@ -640,6 +640,7 @@ ul {
   margin-top: 4rem;
   padding-top: 2%;
   padding-bottom: 5%;
+  font-size: 15px;
   font-family: "Nunito", sans-serif;
 }
 
@@ -757,7 +758,18 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: small;
 
+  }
+
+  .heading h4 {
+    font-size: 40px;
+
+  }
+
+  .heading p {
+
+    font-size: 15px;
   }
 
   .services-container {
@@ -782,6 +794,12 @@ ul {
   }
 
   .h-secondary {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .layout h2 {
     font-size: 30px;
   }
 }
@@ -820,6 +838,8 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+
 
 .container {
   width: 100%;
@@ -1226,6 +1246,10 @@ ul p:hover {
 
 /* Mobile styles */
 @media (max-width: 767px) {
+  .foot-panel1 {
+    font-size: 40px;
+  }
+
   .heads {
     padding-top: 60px;
     padding-left: 60px;
@@ -1308,7 +1332,8 @@ ul p:hover {
     display: block;
   }
 
-  .pages {
+  .pages a {
+    font-size: 15px;
     margin-bottom: 10px;
   }
 
@@ -1321,8 +1346,8 @@ ul p:hover {
 @media (max-width: 480px) {
 
 
-  .pages {
-    font-size: 1.1rem;
+  .pages a {
+    font-size: 10px;
   }
 
   .copyright {
