--- a/style.css
+++ b/style.css
@@ -778,9 +778,10 @@ ul {
   }
 
   .box {
-    width: 80%;
+    padding-right: 10px;
+    width: 60%;
     height: 60%;
-    margin: 10px;
+    margin: 2px;
 
   }
 
